# service-serving-layer

./: Cargo.toml  Config.toml  Dockerfile
src/: config.rs  lib.rs  main.rs
src/helpers/: api_error.rs  get.rs  mod.rs  post.rs
src/routes/: get.rs  get_all_data.rs  get_candidates_by_country.rs  get_closest_vote_difference.rs  get_landslide_victory.rs  get_results.rs  get_results_by_country.rs  get_top_five_candidates_by_vote.rs  mod.rs  post.rs  post_vote.rs  test.rs
tests/: send_vote.rs
