[package]
name = "service-serving-layer"
version = "0.1.0"
authors = ["Julian Krieger <julian.krieger@ergosign.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.1"
env_logger = "0.8.2"
serde = "1.0.118"
serde_json = "1.0.60"
toml = "0.5.7"

[dependencies.reqwest]
version = "0.10.10"
features = ["json"]