[package]
name = "service-serving-layer"
version = "0.1.0"
authors = ["Julian Krieger <julian.krieger@ergosign.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.1"
env_logger = "0.8.2"
serde = "1.0.118"
serde_json = "1.0.60"
toml = "0.5.7"
thiserror = "1.0.23"
config = "0.10.1"
actix-slog = "0.2.1"
slog = "2.7.0"
slog-term = "2.6.0"
slog-async = "2.5.0"
log = "0.4.13"
actix-cors = "0.5.4"
actix-rt = "1.1.1"

[dependencies.reqwest]
version = "0.10.10"
features = ["json"]

[lib]
name = "service_serving_layer"
path = "src/lib.rs"

[[bin]]
name = "service-serving-layer"
path = "src/main.rs"
